# DNSKeyGen

./: DNSKeyGen.py  README.md  pyproject.toml
core/: dnsserver.py  functions.py
