[tool.poetry]
name = "DNSKeyGen"
version = "1.0"
description = ""
authors = ["mhaskar <m.askar@isecur1ty.org>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
dnslib = "^0.9.23"
termcolor = "^2.1.1"
validators = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
